--- a/views/inventoryvaluationreport/inventoryvaluationreport.ejs
+++ b/views/inventoryvaluationreport/inventoryvaluationreport.ejs
@@ -1,54 +1,47 @@
-<div class="modal fade " id="reportmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade " id="valuationitems" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header custom-bg">
-                <h5 class="modal-title" id="exampleModalLabel">Report:</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Sales Items</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="custom-modal-body">
                 <div class="card shadow">
-                    <div class="card-header py-2 header-bg">
-                        <h6 class="m-0 font-weight-bold table-title">Production Report: </h6>
+                    <div class="card-header py-3 header-bg">
+                        <h6 class="m-0 font-weight-bold table-title">Valuation Report:</h6>
                     </div>
                     <div class="card-body">
-                        <div class="row mb-2">
-                            <div class="col-6">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon2">Production ID</span>
-                                    </div>
-                                    <input id="productionid" name="productionid" type="text" class="form-control"
-                                        placeholder="Enter Production Line" aria-label="productionid"
-                                        aria-describedby="basic-addon1" disabled>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon2">Expected Quantity</span>
-                                    </div>
-                                    <input id="expectedquantity" name="expectedquantity" type="text"
-                                        class="form-control" placeholder="Enter Production Line"
-                                        aria-label="expectedquantity" aria-describedby="basic-addon1" disabled>
-                                </div>
-                            </div>
+                        <div class="table-responsive scrollable-table-container">
+                            <table class="table table-bordered custom-mobile-table" id="valuationitems-dataTable" width="100%" cellspacing="10">
+                                <thead class="table-header">
+                                    <tr>
+                                        <th class = "col-1">Branch ID</th>
+                                        <th class = "col-1">Product ID</th>
+                                        <th class = "col-1">Product Name</th>
+                                        <th class = "col-1">Quantity</th>
+                                        <th class = "col-1">Category</th>
+                                        <th class = "col-1">Unit Cost</th>
+                                        <th class = "col-1">Total Value</th>
+                                    </tr>
+                                </thead>          
+                                <tbody>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <td colspan="6" class="text-right">Total:</td>
+                                        <td id="total-cost" colspan="2">₱0.00</td>
+                                    </tr>
+                                </tfoot>
+                            </table>
                         </div>
-                        <div class="row mb-2 justify-content-center">
-                            <div class="col-md-6">
-                                <label class="form-label" for="mu_password">Produced Quantity</label>
-                                <input id="producedquantity" name="producedquantity" type="number" class="form-control"
-                                    placeholder="Enter quantity produced" aria-describedby="basic-addon1">
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
-                <button type="button" id="submitBtn" class="btn btn-outline-inventory">Submit</button>
             </div>
         </div>
     </div>
