--- a/views/inventoryvaluationreport/inventoryvaluationreport.ejs
+++ b/views/inventoryvaluationreport/inventoryvaluationreport.ejs
@@ -143,30 +143,34 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="table-responsive scrollable-table-container-sm table-size">
-                                                <table class="table table-bordered custom-mobile-table" id="products-datatable"
+                                                <table class="table table-bordered custom-mobile-table" id="byproducts-datatable"
                                                     width="100%" cellspacing="10">
                                                     <thead class="table-header">
                                                         <tr>
-                                                            <th class="col-2">Material Name</th>
-                                                            <th class="col-1">Material ID</th>
-                                                            <th class="col-1">Quantity</th>
+                                                            <th class="col-2">Product Name</th>
+                                                            <th class="col-1">Branch ID</th>
+                                                            <th class="col-2">Product ID</th>
+                                                            <th class="col-1">Unit Cost</th>
+                                                            <th class="col-1">Category</th>
+                                                            <th class="col-1">Current Stock</th>
+                                                            <th class="col-1">Total Value</th>
                                                             <th class="col-1">Action</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         <tr>
-                                                            <td data-label="Material Name" class="custom-mobile-align">
-                                                                <select class="form-control text-center" name="materiallists"
-                                                                    id="materiallists">
-                                                                    <option value="">Select Material</option>
+                                                            <td data-label="Product Name" class="custom-mobile-align">
+                                                                <select class="form-control text-center productname" name="productlist"
+                                                                    id="productlist">
+                                                                    <option value="">Select Product</option>
                                                                 </select>
                                                             </td>
-                                                            <td data-label="Material ID"
-                                                                class="custom-mobile-align material-id materialid"></td>
-                                                            <td data-label="Quantity" class="custom-mobile-align">
-                                                                <div class="row justify-content-center"><input id="quantity"
-                                                                        name="quantity" type="number" class="form-control w-50"
-                                                                        placeholder="0.00" value="" maxlength="8"></div>
+                                                            <td data-label="Branch ID" class="custom-mobile-align branch-id branchid"></td>
+                                                            <td data-label="Product ID" class="custom-mobile-align product-id productid"></td>
+                                                            <td data-label="Unit Cost" class="custom-mobile-align unit-cost unitcost"></td>
+                                                            <td data-label="Category" class="custom-mobile-align category ctgy"></td>
+                                                            <td data-label="Current Stock" class="custom-mobile-align current-stock currentstock"></td>
+                                                            <td data-label="Total Value" class="custom-mobile-align total-value totalvalue"></td>
                                                             <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
                                                         </tr>
                                                     </tbody>
@@ -178,12 +182,12 @@
                                     </div>
                                     <div class="row mb-2">
                                         <div class="col-md-12">
-                                            <textarea class="form-control" id="notes" placeholder="Add Notes" rows="2"></textarea>
+                                            <textarea class="form-control" id="notesbyproduct" placeholder="Add Notes" rows="2"></textarea>
                                         </div>
                                     </div>
                                     <div class="row justify-content-end">
                                         <div class="col-md-4 mt-1">
-                                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-50">
+                                            <button id="reportbyproduct" name="addBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-50">
                                                 <i class="fa fa-plus mr-1" aria-hidden="true"> </i>
                                                  GENERATE REPORT
                                             </button>
